--- a/src/app/components/seccion2/seccion2.component.html
+++ b/src/app/components/seccion2/seccion2.component.html
@@ -39,11 +39,11 @@
       defensa de infraestructuras estratégicas, para ofrecerte:
     </p>
     <div class="features">
-      <p>
-        Detección y respuesta temprana ante ataques cibernéticos. <br />
-        Plataforma inteligente para gestión de amenazas. <br />
-        Seguridad proactiva y protección integral para tecnologías de operación.
-      </p>
+      <ul class="items">
+        <li>Detección y respuesta temprana ante ataques cibernéticos.</li>
+        <li>Plataforma inteligente para gestión de amenazas.</li>
+        <li>Seguridad proactiva y protección integral para tecnologías de operación.</li>
+      </ul>
     </div>
     </div>
 
@@ -61,11 +61,11 @@
       medida:
     </p>
     <div class="features">
-      <p>
-        Diseño e implementación de automatización industrial. Optimización de
-        procesos de negocio con tecnologías de vanguardia. Integración de
-        inteligencia artificial y análisis de datos para resultados óptimos.
-      </p>
+      <ul class="items">
+       <li> Diseño e implementación de automatización industrial.</li>
+       <li> Optimización de procesos de negocio con tecnologías de vanguardia.</li> 
+       <li>Integración de inteligencia artificial y análisis de datos para resultados óptimos.</li> 
+      </ul>
     </div>
   </div>
 </div>
@@ -79,13 +79,12 @@
       Lidera el cambio hacia un futuro más sostenible y eficiente:
     </p>
     <div class="features">
-      <p>
-        Implementación de tecnologías innovadoras como inteligencia artificial,
-        computación cuántica y análisis predictivo. Reducción de costos
-        operativos y mejora continua mediante automatización avanzada.
-        Adaptación tecnológica personalizada para las necesidades específicas de
-        tu industria.
-      </p>
+      <ul class="items">
+       <li>Implementación de tecnologías innovadoras como inteligencia artificial,computación cuántica y análisis predictivo.</li> 
+        <li> Reducción de costos operativos y mejora continua mediante automatización avanzada.</li>
+       <li>Adaptación tecnológica personalizada para las necesidades específicas de
+        tu industria.</li>      
+      </ul>
     </div>
   </div>
   
