--- a/src/app/components/nabvar/integraciones/nuestra-manera.component.html
+++ b/src/app/components/nabvar/integraciones/nuestra-manera.component.html
@@ -1,15 +1,8 @@
 <!-- Imagen y texto adicional -->
 <div class="image-text ">
   <img
-    src="../../../../assets/imagendeskt.png"
+    src="../../../../assets/nuestra-manera.png"
     alt="Imagen destacada"
     class="image"
   />
-  <div class="text">
-    <p>
-      Integramos las últimas innovaciones en tecnología con un equipo de
-      expertos en ciberseguridad y automatización para garantizar que tu empresa
-      esté siempre protegida y optimizada.
-    </p>
-  </div>
 </div>
