--- a/src/app/components/nabvar/integraciones/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/integraciones/nuestra-manera.component.scss
@@ -3,36 +3,18 @@
   height: 100%;
   margin: 0;
 }
-.text{
-  font-family: "Guton", Georgia;
-  padding: 25px 19px 15px 35px;
-  font-weight: 400;
-  font-size: 1.2rem;
-
-}
-
-@media (min-width: 768px) {
+@media (min-width: 768px)  { 
   .image-text {
+    content: url("../../../../assets/nuestra-manera-pc.png");
     display: flex;              
     width: 100%;                 
    
   }
   
   .image {
-    width: 50%;                 
+    width: 100%;                 
     height: auto;                 
     object-fit: cover;            
   }
-  .text{
-    width: 50%;
-    font-family: "GutonMed", Georgia;
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-      justify-content: center;
-
-    
-  }
- 
 
 }
