--- a/src/app/components/nabvar/experiencia/experiencia.component.scss
+++ b/src/app/components/nabvar/experiencia/experiencia.component.scss
@@ -20,9 +20,15 @@
 }
 
 .accordion-item { 
+  
   background: #1525EA;
   margin: 20px;
   overflow: hidden;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 .accordion-btn {
@@ -93,36 +99,37 @@ p {
   
   @media (min-width: 768px) {
 
-.accordion-btn{
-  font-size: 2rem !important;
-  margin-left: 15px !important;
-}
-  .accordion-container h2 {
-    font-size: 3rem !important;
+  .item1 {
+    width: 48%; 
+    margin: 1%; 
   }
-  .accordion-btn i {
+  .item2{
+    width: 48%; 
+    margin: 1%; 
+  }
+ 
+  .accordion-container {
+    justify-content: space-between; /* Espacio uniforme entre acordeones */
+  }
 
+  .accordion-btn {
+    font-size: 1.5rem;
+    margin-left: 15px;
+  }
+
+  .accordion-container h2 {
+    font-size: 3rem;
+  }
+
+  .accordion-btn i {
     font-size: 30px;
     margin-right: 10px;
   }
-  p{
+
+  p {
     font-family: "Guton", Georgia;
     font-size: 1rem;
     padding-left: 20px;
-    
   }
-
-  .accordion-content.active {
-    max-height: none; /* Ajusta según el contenido */
-    opacity: 1;
-    transition: max-height 0.5s ease, opacity 0.5s ease; 
-  }
- .btn-container{
-  align-items: center;
-  display: flex;  
-  text-align: center !important; 
-  flex-direction: column;
- }     
- 
   }
  
