--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <!-- Redes Sociales -->
     <div class="mb-3">   
-      <a href="https://instagram.com" target="_blank" class="text-black me-4">
+      <a href="https://www.linkedin.com/company/salemtechnologies/posts/?feedView=all " target="_blank" class="text-black me-4">
         <i class="fab fa-linkedin fa-lg"></i>
       </a>  
     </div>
