update jefes and footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,12 +7,11 @@
       </a>  
     </div>
 
-    <!-- Enlace al Email -->
-    <p class="mb-0">
-      Contact us: <a href="mailto:example@example.com" class="text-black">exampleexample.com</a>
-    </p>
-
     <!-- Derechos reservados -->
-    <p class="mt-2 mb-0">&copy; 2024 Agencia Paliza</p>
+    <p class="mt-2 mb-0">&copy; 
+      <a href="https://www.linkedin.com/company/agencia-paliza/" target="_blank">
+        2025 Agencia Paliza
+      </a>
+    </p>
   </div>
 </footer>
