--- a/src/app/components/nabvar/jefes/jefes.component.html
+++ b/src/app/components/nabvar/jefes/jefes.component.html
@@ -4,13 +4,19 @@
       <img src="../../../../assets/foto leo.png" class="rounded-circle" alt="Persona 1">
       <h3>Leonardo Gimeno</h3>
       <p>Director Ejecutivo | Ing. Aeronáutico  <br>
-       Linkedin Leonardo R Gimeno</p>
+        Linkedin 
+        <a href="https://www.linkedin.com/in/leonardo-r-gimeno-94b103b/" target="_blank">
+          Leonardo R Gimeno        
+        </a></p>
     </div>
     <div class="team-member">
       <img src="../../../../assets/foto santi.png" class="rounded-circle" alt="Persona 2">
       <h3>Santiago Yaconis</h3>
           <p>Socio Fundador | Ing. Quimico <br>
-          Linkedin Santiago Yaconis</p>
+            Linkedin 
+            <a href="https://www.linkedin.com/in/santiago-yaconis" target="_blank">
+              Santiago Yaconis
+            </a></p>
     </div>
   </div>
 
