--- a/src/app/components/nabvar/experiencia/experiencia.component.html
+++ b/src/app/components/nabvar/experiencia/experiencia.component.html
@@ -1,5 +1,5 @@
 <div class="accordion-container">
-  <h2><strong>Experiencia</strong></h2>
+  <h2><strong>Casos Relevantes</strong></h2>
 
   <div class="accordion-item">
     <div class="item1">
