cambios menu item,nosotros component

--- a/src/app/components/nabvar/que-hacemos/nosotros.component.html
+++ b/src/app/components/nabvar/que-hacemos/nosotros.component.html
@@ -24,13 +24,14 @@
             isOpen[1] ? 'fa-solid fa-circle-minus' : 'fa-solid fa-circle-plus'
           "
         ></i
-        ><strong>CONSULTORÍA EN AUTOMATIZACIÓN</strong>
+        ><strong>EXCELENCIA OPERACIONAL y OPTIMIZACIÓN DE PROCESOS</strong>
       </button>
       <div class="accordion-content" [ngClass]="{ active: isOpen[1] }">
         <p class="p2">
-          Optimización de procesos <br>
+          Consultoría en optimización en tiempo real de procesos<br>
           Excelencia Operacional (HMI, Alarmas, Ventanas Operativas, Logbooks, etc) <br>
-          Análisis de estrategias de control y Control de Procesos <br>
+          Análisis de estrategias de control y Control de Procesos<br>
+          Consultoría en Seguridad de Procesos aplicada a entornos OT<br>
           
         </p>
       </div>
@@ -40,12 +41,13 @@
               isOpen[2] ? 'fa-solid fa-circle-minus' : 'fa-solid fa-circle-plus'
             "
           ></i
-          ><strong>SOLUCIONES AVANZADAS</strong>
+          ><strong>TRANSFORMACIÓN DIGITAL</strong>
         </button>
         <div class="accordion-content" [ngClass]="{ active: isOpen[2] }">
           <p class="p3">
             Analítica e IA aplicadas a entornos OT <br>
-            Demand Forcasting & Supply Chain <br>
+            Demand Forecasting & Supply Chain <br>
+            Nuevas Tecnologías Aplicadas a Casos de Uso Específicos<br>
             
           </p>
         </div>
